1999-11-12  MORIOKA Tomohiko  <tomo@urania.m17n.org>

	* startup.el (normal-top-level): Load autoload file for UTF-2000
	in UTF-2000.

	* utf-2000/auto-autoloads.el: New file.

	* utf-2000/char-db-util.el: New file.

1999-11-11  MORIOKA Tomohiko  <tomo@etl.go.jp>

	* utf-2000/u00020-Basic-Latin.el (SPACE): Add `(ipa #x7F)'.

1999-11-11  MORIOKA Tomohiko  <tomo@etl.go.jp>

	* dumped-lisp.el (preloaded-file-list): Add "mule-conf" in Mule;
	delete "ccs-iso8859-*.el"; add "u00000-C0.el",
	"u00020-Basic-Latin.el", "u00080-C1.el",
	"u000A0-Latin-1-Supplement.el", "u00100-Latin-Extended-A.el",
	"u00180-Latin-Extended-B.el", "u00250-IPA-Extensions.el",
	"u002B0-Spacing-Modifier-Letters.el",
	"u00300-Combining-Diacritical-Marks.el" and "u00370-Greek.el".

	* utf-2000/ccs-iso8859-2.el, utf-2000/ccs-iso8859-3.el,
	utf-2000/ccs-iso8859-4.el, utf-2000/ccs-iso8859-9.el: Delete.

	* utf-2000/u00000-C0.el, utf-2000/u00020-Basic-Latin.el,
	utf-2000/u00080-C1.el, utf-2000/u000A0-Latin-1-Supplement.el,
	utf-2000/u00180-Latin-Extended-B.el,
	utf-2000/u00100-Latin-Extended-A.el,
	utf-2000/u00250-IPA-Extensions.el,
	utf-2000/u002B0-Spacing-Modifier-Letters.el,
	utf-2000/u00300-Combining-Diacritical-Marks.el,
	utf-2000/u00370-Greek.el: New files.

1999-11-10  MORIOKA Tomohiko  <tomo@etl.go.jp>

	* mule/mule-charset.el (default-coded-charset-priority-list): Add
	`japanese-jisx0212' and `ipa' in UTF-2000; use `latin-viscii-*'
	instead of `vietnamese-viscii-*'.

1999-11-09  MORIOKA Tomohiko  <tomo@etl.go.jp>

	* mule/mule-conf.el: New file.

	* mule/misc-lang.el: Move definition of charset `ipa' to
	mule/mule-conf.el.

1999-10-10  MORIOKA Tomohiko  <tomo@urania.m17n.org>

	* mule/mule-charset.el (default-coded-charset-priority-list): Add
	`latin-viscii'; prefer it for characters used in Vietnamese.

	* utf-2000/ccs-viscii.el: Add mapping-table for `latin-viscii'.

1999-10-08   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* bytecomp.el (byte-compile-insert-header): Fix regexp.
