@@ -1,10 +1,12 @@
 ;;; DO NOT MODIFY THIS FILE
 (if (featurep 'utf-2000-autoloads) (error "Already loaded"))
+
+(provide 'utf-2000-autoloads)
 
-;;;### (autoloads (what-char-definition) "char-db-util" "utf-2000/char-db-util.el")
+;;;### (autoloads (what-char-definition char-db-update-comment) "char-db-util" "utf-2000/char-db-util.el")
+
+(autoload 'char-db-update-comment "char-db-util" nil t nil)
 
 (autoload 'what-char-definition "char-db-util" nil t nil)
 
 ;;;***
-
-(provide 'utf-2000-autoloads)
